syntax = "proto3";
package oxygen_lib;

service Oxygen {
    rpc register(ClientId) returns (RegResponse);
    rpc getAllCollections(ClientId) returns (CollectionResponse);
    rpc getCollection(CollectionRequest) returns (CollectionResponse);
    rpc getFile(FileRequest) returns (FileResponse);
}

message ClientId {
    string uuid = 1;
}

// XXX: do we need these succesful flags since server already return a result?
message RegResponse {
    string clientId = 1;
    string serverId = 2;
    bool successful = 3;
}

// XXX: think if it is work it to seperate this for cases that return only 1 collectons
message CollectionResponse {
    bool successful = 1;
    repeated Collection collections = 2;
}

message CollectionRequest {
    ClientId clientId = 1;
    uint64 collectionId = 2;
}

message FileResponse {
    bool successful = 1;
    File file = 2;
}

message FileRequest {
    ClientId clientId = 1;
    uint64 fileId = 2;
}


// XXX: ideally client must be agnostic to the folder structure
message Collection {
    string name = 1;
    uint64 id = 2; // unique within the server
    repeated Collection childCollections = 3;
    repeated File files = 4;
}

message File {
    string name = 1;
    uint64 id = 2; // unique within the server
}